RFMO-2327 :- map-container size fixed and z-index is changed for road-link layer

--- a/FMO/Fmo.UI/wwwroot/app/layers/layers.scss
+++ b/FMO/Fmo.UI/wwwroot/app/layers/layers.scss
@@ -3,3 +3,7 @@
 .baseLayer{
     @extend %body-content;
 }
+
+.thin-switch{
+    @include margin(0px 0px 0px 0px);
+}
