--- a/FMO/Fmo.UI/wwwroot/app/map-keys/map-keys.scss
+++ b/FMO/Fmo.UI/wwwroot/app/map-keys/map-keys.scss
@@ -20,190 +20,5 @@
 }
 .mapKeys{
     @extend %body-content;
-}
-
-.mapKeys{
-    @include margin(5px 0px 10px 5px);
-}@import './app/variables';
-
-.selcetedKey{
-    @extend %font-icon;
-    @include font-color($go-green);
-}
-
-.deliveryKey{
-    @extend %font-icon;
-    @include font-color($red);
-}
-
-.roadKey{
-    @extend %font-icon;
-    @include font-color($go-green);  
-}
-
-.accessKey{
-    @extend %font-icon;
-}
-.mapKeys{
-    @extend %body-content;
-}
-
-.mapKeys{
-    @include margin(5px 0px 10px 5px);
-}@import './app/variables';
-
-.selcetedKey{
-    @extend %font-icon;
-    @include font-color($go-green);
-}
-
-.deliveryKey{
-    @extend %font-icon;
-    @include font-color($red);
-}
-
-.roadKey{
-    @extend %font-icon;
-    @include font-color($go-green);  
-}
-
-.accessKey{
-    @extend %font-icon;
-}
-.mapKeys{
-    @extend %body-content;
-}
-
-.mapKeys{
-    @include margin(5px 0px 10px 5px);
-}@import './app/variables';
-
-.selcetedKey{
-    @extend %font-icon;
-    @include font-color($go-green);
-}
-
-.deliveryKey{
-    @extend %font-icon;
-    @include font-color($red);
-}
-
-.roadKey{
-    @extend %font-icon;
-    @include font-color($go-green);  
-}
-
-.accessKey{
-    @extend %font-icon;
-}
-.mapKeys{
-    @extend %body-content;
-}
-
-.mapKeys{
-    @include margin(5px 0px 10px 5px);
-}@import './app/variables';
-
-.selcetedKey{
-    @extend %font-icon;
-    @include font-color($go-green);
-}
-
-.deliveryKey{
-    @extend %font-icon;
-    @include font-color($red);
-}
-
-.roadKey{
-    @extend %font-icon;
-    @include font-color($go-green);  
-}
-
-.accessKey{
-    @extend %font-icon;
-}
-.mapKeys{
-    @extend %body-content;
-}
-
-.mapKeys{
-    @include margin(5px 0px 10px 5px);
-}@import './app/variables';
-
-.selcetedKey{
-    @extend %font-icon;
-    @include font-color($go-green);
-}
-
-.deliveryKey{
-    @extend %font-icon;
-    @include font-color($red);
-}
-
-.roadKey{
-    @extend %font-icon;
-    @include font-color($go-green);  
-}
-
-.accessKey{
-    @extend %font-icon;
-}
-.mapKeys{
-    @extend %body-content;
-}
-
-.mapKeys{
-    @include margin(5px 0px 10px 5px);
-}@import './app/variables';
-
-.selcetedKey{
-    @extend %font-icon;
-    @include font-color($go-green);
-}
-
-.deliveryKey{
-    @extend %font-icon;
-    @include font-color($red);
-}
-
-.roadKey{
-    @extend %font-icon;
-    @include font-color($go-green);  
-}
-
-.accessKey{
-    @extend %font-icon;
-}
-.mapKeys{
-    @extend %body-content;
-}
-
-.mapKeys{
-    @include margin(5px 0px 10px 5px);
-}@import './app/variables';
-
-.selcetedKey{
-    @extend %font-icon;
-    @include font-color($go-green);
-}
-
-.deliveryKey{
-    @extend %font-icon;
-    @include font-color($red);
-}
-
-.roadKey{
-    @extend %font-icon;
-    @include font-color($go-green);  
-}
-
-.accessKey{
-    @extend %font-icon;
-}
-.mapKeys{
-    @extend %body-content;
-}
-
-.mapKeys{
-    @include margin(5px 0px 10px 5px);
+    @include margin(4px 0px 0px 0px);
 }
